<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dnrcpw.cpwmobilepdf.activities.PDFActivity">
    <item
        android:id="@+id/action_add_way_pt"
        android:icon="@mipmap/ic_grey_pin_forgnd"
        android:title="@string/add_way_pt"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
      android:id="@+id/action_markCurrent"
      android:title="@string/markCurrent"
      android:visible="true"
      app:showAsAction="never" />
  <item
      android:id="@+id/action_add_way_pt_menu"
      android:title="@string/add_way_pt"
      android:visible="true"
      app:showAsAction="never" />
  <item
      android:id="@+id/action_add_lat_long_menu"
      android:title="@string/add_lat_long"
      android:visible="true"
      app:showAsAction="never" />
  <item
      android:id="@+id/action_deleteAll"
      android:title="@string/deleteAllWayPts"
      android:visible="true"
      app:showAsAction="never" />
  <item android:title="@string/app_settings"/>
      <item
          android:id="@+id/action_showWayPts"
          android:title="@string/showWayPts"
          android:icon="@drawable/pin"
          android:checkable="true"
          android:checked="true"
          android:visible="true"
          app:showAsAction="never" />
      <item
          android:id="@+id/action_showAll"
          android:title="@string/showWayPtLabels"
          android:icon="@drawable/chat_bubble"
          android:checkable="true"
          android:checked="false"
          android:visible="true"
          app:showAsAction="never" />
      <item
          android:id="@+id/action_loadAdjacentMaps"
          android:title="@string/loadAdjacentMaps"
          android:icon="@drawable/map"
          android:checkable="true"
          android:checked="true"
          android:visible="true"
          app:showAsAction="never" />

  <item android:title="@string/map_settings"/>
        <item
            android:id="@+id/action_portrait"
            android:checkable="true"
            android:checked="false"
            android:icon="@drawable/screen_lock_portrait"
            android:title="@string/portrait"
            android:visible="true"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_landscape"
            android:checkable="true"
            android:checked="false"
            android:icon="@drawable/screen_lock_landscape"
            android:title="@string/landscape"
            android:visible="true"
            app:showAsAction="never" />

  <item
      android:id="@+id/action_help"
      android:icon="@android:drawable/ic_menu_help"
      android:title="@string/help"
      android:visible="true"
      app:showAsAction="never" />
</menu>